Settings are non-null from loadState on (#48)
Seven DataFlowIssue findings came from one decision: the settings fields were
@Nullable because copyBean can write a null over a default from an older file.
That is true, and it pushed the problem onto every reader - each writing the
value straight into a DTO field or an enum lookup that requires one.

Normalised once in loadState, where the null can actually appear, and the fields
say @NotNull. No call site changed. It also closes a latent crash:
Level.valueOf(settings.logLevel) would have thrown on a null level.

Nine always-true conditions fell out with it - the defaultFolder guards in the
three file dialogs and the startup checks - since a null half of each condition
is now unreachable.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>